--- a/pages/Roadmap.mdx
+++ b/pages/Roadmap.mdx
@@ -4,8 +4,8 @@
 
 ### By 2023/08/24
 
-- [ ] Enable admin-level users to CRUD agents, abilities, and oracles.
-- [ ] Display all logging information to users (developers).
+- [x] Enable admin-level users to CRUD agents, abilities, and oracles.
+- [x] Display all logging information to users (developers).
 
 ## Test bench
 
