--- a/pages/Roadmap.mdx
+++ b/pages/Roadmap.mdx
@@ -1,43 +1,1 @@
-# 🗺️ Roadmap of Gothub
-
-## Infra
-
-### By 2023/08/24
-
-- [x] Enable admin-level users to CRUD agents, abilities, and oracles.
-- [x] Display all logging information to users (developers).
-
-## Test bench
-
-### By 2023/08/27
-
-- [ ] An oracle to test against the APPS benchmark (LeetCode-like).
-- [ ] Try to create a agent that performs really well (as much as possible) on the APPS benchmark.
----
-- [ ] Perhaps types (Dynamic Programming, Greedy, ...) tutorials
-- [ ] Perhaps types (Dynamic Programming, Greedy, ...) templates, and next step fill in blanks
-- [ ] Python execution tool, if fails, try again
-
-## Writing full-stack apps
-
-### By 2023/08/31
-
-- [ ] An ability to implement user Google auth
-- [ ] An ability to implement Firebase CRUD
-
-## Writing streamlit apps
-
-### By 2023/09/15
-
-- [ ] An order template for streamlit apps
-- [ ] An ability to write some streamlit app
-- [ ] An oracle to deploy?
-
-## Experimentation
-
-### By 2023/09/15
-
-- [ ] An ability/oracle that does code chunking, embedding, and search?
-- [ ] An ability/oracle that scrapes the web for documentation?
-- [ ] An ability/oracle that scrapes the web for styles?
-- [ ] An ability/oracle that executes some code?
+# 🗺️ Roadmap of GotHub
