--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,26 +1,37 @@
 # Introduction
 
-- To start a new chat:
-  ```python
-  as new chat
-  ```
-- To execute Python code:
-  ```python
-  as code
-  ```
-- To talk to GPT-3.5 in current cell:
-  ```python
-  with gpt-3.5
-  ```
-  or
-  ```python
-  with gpt3.5
-  ```
-- To talk to GPT-4 in current cell:
-  ```python
-  with gpt-4
-  ```
-  or
-  ```python
-  with gpt4
-  ```
+### To start a new chat
+
+```python
+as new chat
+```
+
+### To execute Python code
+
+```python
+as code
+```
+
+### To talk to GPT-3.5 in current cell
+
+```python
+with gpt-3.5
+```
+
+or
+
+```python
+with gpt3.5
+```
+
+### To talk to GPT-4 in current cell
+
+```python
+with gpt-4
+```
+
+or
+
+```python
+with gpt4
+```
