--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,5 +1,7 @@
 # Introduction
 
+##
+
 ### To start a new chat
 
 This will clear chat history but not system message.
@@ -36,4 +38,14 @@ or
 
 ```python
 with gpt4
+```
+
+## As code: `got` library
+
+### To talk to the default large langauge model
+
+```python
+as code
+from got import ask
+ask("What is the meaning of life?")
 ```
