--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -49,3 +49,19 @@ as code
 from got import ask
 ask("What is the meaning of life?")
 ```
+
+### To talk to GPT-3.5 in current cell using code
+
+```python
+with gpt-3.5 as code
+from got import ask
+ask("What is the meaning of life?")
+```
+
+### To talk to GPT-4 in current cell using code
+
+```python
+with gpt-4 as code
+from got import ask
+ask("What is the meaning of life?")
+```
