--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -8,36 +8,42 @@ This will clear chat history but not system message.
 
 ```python
 as new chat
+What is the meaning of life?
 ```
 
 ### To execute Python code
 
 ```python
 as code
+print("Hello world!")
 ```
 
 ### To talk to GPT-3.5 in current cell
 
 ```python
 with gpt-3.5
+What is the meaning of life?
 ```
 
 or
 
 ```python
 with gpt3.5
+What is the meaning of life?
 ```
 
 ### To talk to GPT-4 in current cell
 
 ```python
 with gpt-4
+What is the meaning of life?
 ```
 
 or
 
 ```python
 with gpt4
+What is the meaning of life?
 ```
 
 ## As code: `got` library
