--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -11,6 +11,15 @@ What is the meaning of life?
 > **ChatGPT gpt-4:**
 > The meaning of life is a philosophical and metaphysical question related to the significance of living or existence in general. Many interpretations often relate to one's purpose, fulfillment, or the pursuit of happiness. However, it can vary greatly among different cultures, religions, philosophical views. It's a deeply personal and subjective topic.
 
+By default, the chat history will be kept.
+
+```python
+What did I just ask?
+```
+
+> **ChatGPT gpt-4:**
+> You just asked about the meaning of life.
+
 ### To start a new chat
 
 This will clear chat history but not system message.
