--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -11,7 +11,7 @@ What is the meaning of life?
 > **ChatGPT gpt-4:**
 > The meaning of life is a philosophical and metaphysical question related to the significance of living or existence in general. Many interpretations often relate to one's purpose, fulfillment, or the pursuit of happiness. However, it can vary greatly among different cultures, religions, philosophical views. It's a deeply personal and subjective topic.
 
-By default, the chat history will be kept.
+By default, the chat history will be kept, same as ChatGPT.
 
 ```python
 What did I just ask?
