--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -26,8 +26,11 @@ This will clear chat history but not system message.
 
 ```python
 as new chat
-What is the meaning of life?
+What did I just ask?
 ```
+
+> **ChatGPT gpt-4:**
+> As an AI, I can't answer this question without a previous context. Please tell me what you asked me.
 
 ### To execute Python code
 
