--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -69,6 +69,8 @@ What is the meaning of life?
 
 ## As code: `got` library
 
+`got` stands for "git of thoughts".
+
 ### To talk to the default large langauge model
 
 ```python
