--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,6 +1,6 @@
 # Introduction
 
-## First-line magic
+## First-line magics
 
 Without any first-line magic, the default large language model will be used.
 
@@ -36,8 +36,10 @@ What did I just ask?
 
 ```python
 as code
-print("Hello world!")
+print("Hello GotHub!")
 ```
+
+> Hello GotHub!
 
 ### To talk to GPT-3.5 in current cell
 
@@ -69,7 +71,10 @@ What is the meaning of life?
 
 ## As code: `got` library
 
-`got` stands for "git of thoughts".
+`got` has some convient functions to interact with the models, the code environment,
+and the storage system.
+
+Fun fact: `got` stands for "git of thoughts".
 
 ### To talk to the default large langauge model
 
