--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -8,7 +8,7 @@ Without any first-line magic, the default large language model will be used.
 What is the meaning of life?
 ```
 
-> **ChatGPT gpt-4:**
+> _ChatGPT gpt-4:_
 >
 > The meaning of life is a philosophical and metaphysical question related to the significance of living or existence in general. Many interpretations often relate to one's purpose, fulfillment, or the pursuit of happiness. However, it can vary greatly among different cultures, religions, philosophical views. It's a deeply personal and subjective topic.
 
