--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -10,7 +10,8 @@ What is the meaning of life?
 
 ```
 ChatGPT gpt-4:
-The meaning of life is a philosophical and metaphysical question related to the significance of living or existence in general. Many interpretations often relate to one's purpose, fulfillment, or the pursuit of happiness. However, it can vary greatly among different cultures, religions, philosophical views. It's a deeply personal and subjective topic.
+
+The meaning of life is a philosophical and metaphysical question...
 ```
 
 By default, the chat history will be kept, same as ChatGPT.
@@ -19,9 +20,11 @@ By default, the chat history will be kept, same as ChatGPT.
 What did I just ask?
 ```
 
-> **ChatGPT gpt-4:**
->
-> You just asked about the meaning of life.
+```
+ChatGPT gpt-4:
+
+You just asked about the meaning of life.
+```
 
 ### To start a new chat
 
@@ -32,9 +35,11 @@ as new chat
 What did I just ask?
 ```
 
-> **ChatGPT gpt-4:**
->
-> As an AI, I can't answer this question without a previous context. Please tell me what you asked me.
+```
+ChatGPT gpt-4:
+
+As an AI, I can't answer this question without a previous context.
+```
 
 ### To execute Python code
 
