--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -8,10 +8,10 @@ Without any first-line magic, the default large language model will be used.
 What is the meaning of life?
 ```
 
-```
-ChatGPT gpt-4:
-
-The meaning of life is a philosophical and metaphysical question...
+```markdown
+> ChatGPT gpt-4:
+>
+> The meaning of life is a philosophical and metaphysical question...
 ```
 
 By default, the chat history will be kept, same as ChatGPT.
@@ -45,8 +45,6 @@ As an AI, I can't answer this question without a previous context.
 
 ```python
 as code
-
-
 print("Hello GotHub!")
 ```
 
