--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -9,9 +9,9 @@ What is the meaning of life?
 ```
 
 ```markdown
-> ChatGPT gpt-4:
->
-> The meaning of life is a philosophical and metaphysical question...
+ChatGPT gpt-4:
+
+The meaning of life is a philosophical and metaphysical question...
 ```
 
 By default, the chat history will be kept, same as ChatGPT.
