--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -20,7 +20,7 @@ By default, the chat history will be kept, same as ChatGPT.
 What did I just ask?
 ```
 
-```
+```markdown
 ChatGPT gpt-4:
 
 You just asked about the meaning of life.
@@ -35,7 +35,7 @@ as new chat
 What did I just ask?
 ```
 
-```
+```markdown
 ChatGPT gpt-4:
 
 As an AI, I can't answer this question without a previous context.
@@ -48,7 +48,9 @@ as code
 print("Hello GotHub!")
 ```
 
-> Hello GotHub!
+```markdown
+Hello GotHub!
+```
 
 ### To talk to GPT-3.5 in current cell
 
