--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -21,7 +21,7 @@ What did I just ask?
 ```
 
 ```markdown
-ChatGPT gpt-4:
+**ChatGPT gpt-4:**
 
 You just asked about the meaning of life.
 ```
@@ -35,8 +35,8 @@ as new chat
 What did I just ask?
 ```
 
-```markdown
-ChatGPT gpt-4:
+```md
+**ChatGPT gpt-4:**
 
 As an AI, I can't answer this question without a previous context.
 ```
