--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -4,9 +4,13 @@
 
 Without any first-line magic, the default large language model will be used.
 
+**Cell**
+
 ```python
 What is the meaning of life?
 ```
+
+**Output**
 
 ```markdown
 ChatGPT gpt-4:
@@ -16,12 +20,16 @@ The meaning of life is a philosophical and metaphysical question...
 
 By default, the chat history will be kept, same as ChatGPT.
 
+**Cell**
+
 ```python
 What did I just ask?
 ```
 
+**Output**
+
 ```markdown
-**ChatGPT gpt-4:**
+ChatGPT gpt-4:
 
 You just asked about the meaning of life.
 ```
@@ -30,13 +38,17 @@ You just asked about the meaning of life.
 
 This will clear chat history but not system message.
 
+**Cell**
+
 ```python
 as new chat
 What did I just ask?
 ```
 
-```md
-**ChatGPT gpt-4:**
+**Output**
+
+```markdown
+ChatGPT gpt-4:
 
 As an AI, I can't answer this question without a previous context.
 ```
