--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -55,10 +55,14 @@ As an AI, I can't answer this question without a previous context.
 
 ### To execute Python code
 
+**Cell**
+
 ```python
 as code
 print("Hello GotHub!")
 ```
+
+**Output**
 
 ```markdown
 Hello GotHub!
