--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -114,7 +114,9 @@ response = ask("What is the meaning of life?")
 ### To talk to GPT-3.5 in current cell using code
 
 ```python
-with gpt-3.5 as code
+with gpt-3.5
+as code
+
 from got import ask
 response = ask("What is the meaning of life?")
 ```
@@ -122,7 +124,9 @@ response = ask("What is the meaning of life?")
 ### To talk to GPT-4 in current cell using code
 
 ```python
-with gpt-4 as code
+with gpt-4
+as code
+
 from got import ask
 response = ask("What is the meaning of life?")
 ```
