--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -96,6 +96,12 @@ with gpt4
 What is the meaning of life?
 ```
 
+### To get your account information
+
+```python
+print account
+```
+
 ## As code: `got` library
 
 `got` has some convient functions to interact with the models, the code environment,
