--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,6 +1,6 @@
 # Introduction
 
-Without any first-line magic, the default large language model will be used.
+Without any first-line magic, the default language model will be used.
 
 **Cell**
 
@@ -104,12 +104,12 @@ print account
 
 ## As code: `got` library
 
-`got` has some convient functions to interact with the models, the code environment,
+`got` has some convenient functions to interact with the models, the code environment,
 and the storage system.
 
 Fun fact: `got` stands for "git of thoughts".
 
-### To talk to the default large langauge model
+### To talk to the default language model
 
 ```python
 as code
