--- a/pages/Models.mdx
+++ b/pages/Models.mdx
@@ -2,6 +2,14 @@
 
 Use `with <Model String>` as a first-line magic to select a model to use for the cell.
 
+For example:
+
+```python
+with gpt3.5
+
+What is the meaning of life?
+```
+
 ## Chat Models
 
 |                                                                                                                                            | Model Name       | Model String |
