--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -34,7 +34,7 @@ You just asked about the meaning of life.
 
 ## First-line magics
 
-### To start a new chat
+### Start a new chat
 
 This will clear chat history but not system message.
 
@@ -53,7 +53,7 @@ ChatGPT gpt-4:
 As an AI, I can't answer this question without a previous context.
 ```
 
-### To execute Python code
+### Execute Python code
 
 **Cell**
 
@@ -68,7 +68,7 @@ print("Hello GotHub!")
 Hello GotHub!
 ```
 
-### To talk to GPT-3.5 in current cell
+### Talk to GPT-3.5 in current cell
 
 ```python
 with gpt-3.5
@@ -82,7 +82,7 @@ with gpt3.5
 What is the meaning of life?
 ```
 
-### To talk to GPT-4 in current cell
+### Talk to GPT-4 in current cell
 
 ```python
 with gpt-4
@@ -96,7 +96,11 @@ with gpt4
 What is the meaning of life?
 ```
 
-### To get your account information
+### Talk to other models
+
+👈 Check out the [🤖 Models](Models.mdx) page for all available models.
+
+### Get your account information
 
 ```python
 print account
@@ -109,7 +113,7 @@ and the storage system.
 
 Fun fact: `got` stands for "git of thoughts".
 
-### To talk to the default language model
+### Talk to the default language model
 
 ```python
 as code
@@ -118,7 +122,7 @@ from got import ask
 response = ask("What is the meaning of life?")
 ```
 
-### To talk to GPT-3.5 in current cell using code
+### Talk to GPT-3.5 in current cell using code
 
 ```python
 with gpt-3.5
@@ -128,7 +132,7 @@ from got import ask
 response = ask("What is the meaning of life?")
 ```
 
-### To talk to GPT-4 in current cell using code
+### Talk to GPT-4 in current cell using code
 
 ```python
 with gpt-4
