--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -42,6 +42,7 @@ This will clear chat history but not system message.
 
 ```python
 as new chat
+
 What did I just ask?
 ```
 
@@ -59,6 +60,7 @@ As an AI, I can't answer this question without a previous context.
 
 ```python
 as code
+
 print("Hello GotHub!")
 ```
 
@@ -72,6 +74,7 @@ Hello GotHub!
 
 ```python
 with gpt-3.5
+
 What is the meaning of life?
 ```
 
@@ -79,6 +82,7 @@ or
 
 ```python
 with gpt3.5
+
 What is the meaning of life?
 ```
 
@@ -86,6 +90,7 @@ What is the meaning of life?
 
 ```python
 with gpt-4
+
 What is the meaning of life?
 ```
 
@@ -93,6 +98,7 @@ or
 
 ```python
 with gpt4
+
 What is the meaning of life?
 ```
 
@@ -100,7 +106,7 @@ What is the meaning of life?
 
 👈 Check out the [🤖 Models](Models.mdx) page for all available models.
 
-### Get your account information
+### Get account information
 
 ```python
 print account
