--- a/pages/Models.mdx
+++ b/pages/Models.mdx
@@ -22,12 +22,7 @@ What is the meaning of life?
 
 ## Image Models
 
-|                                                                                                                                         | Model Name | Model String |
-| --------------------------------------------------------------------------------------------------------------------------------------- | ---------- | ------------ |
-| ![](https://raw.githubusercontent.com/Git-of-Thoughts/GotHub-JupyterHub-Home/main/.local/share/jupyter/kernels/dall-e-3/logo-32x32.png) | DALL·E 3   | `dall-e-3`   |
-
-## Code Models
-
-|                                                                                                                                           | Model Name       | Model String |
-| ----------------------------------------------------------------------------------------------------------------------------------------- | ---------------- | ------------ |
-| ![](https://raw.githubusercontent.com/Git-of-Thoughts/GotHub-JupyterHub-Home/main/.local/share/jupyter/kernels/code-llama/logo-32x32.png) | Code Llama (34B) | `code-llama` |
+|                                                                                                                                         | Model Name          | Model String |
+| --------------------------------------------------------------------------------------------------------------------------------------- | ------------------- | ------------ |
+| ![](https://raw.githubusercontent.com/Git-of-Thoughts/GotHub-JupyterHub-Home/main/.local/share/jupyter/kernels/dall-e-3/logo-32x32.png) | DALL·E 3            | `dall-e-3`   |
+| ![](https://raw.githubusercontent.com/Git-of-Thoughts/GotHub-JupyterHub-Home/main/.local/share/jupyter/kernels/sdxl/logo-32x32.png)     | Stable Diffusion XL | `sdxl`       |
